--- a/selfrestart.cabal
+++ b/selfrestart.cabal
@@ -19,7 +19,7 @@ description:
 
 library
   exposed-modules:     System.SelfRestart
-  build-depends:       base >= 4.5
+  build-depends:       base >= 4.5 && < 5
                      , directory >= 1.2
                      , executable-path >= 0.0.3
                      , unix >= 2.6
